# scrambled-eggs

./: .dockerignore  .env.example  .flaskenv  .gitignore  .pre-commit-config.yaml  0.15.0  0.3.0  1.0.0  1.12.0  3.0.0  4.0.0  DECENTRALIZED_ARCHITECTURE.md  DEVELOPMENT_ROADMAP.md  Dockerfile  LLM_INTEGRATION.md  MANIFEST.in  PRODUCTION.md  README.md  TODO.md  __main__.py  alembic.ini  app.py  audio_test.html  audio_test.py  build_docs.bat  check_env.py  check_imports.py  check_tor.py  check_tor_connection.py  clean_web_app.py  clippy_ai.py  clippy_demo.py  compat.py  config.ini  config.py  create_mfa_tables.py  crypto_config.json  db_setup.py  direct_launch.py  docker-compose.monitoring.yml  (+89 more)
.github/workflows/: ci-cd.yml  ci.yml  docs.yml  model-registry-ci.yml  test-and-deploy.yml
MISSIONS/: scrambled_eggs_encryption.md
_build/doctrees/: api.doctree  environment.pickle  getting_started.doctree  index.doctree  user_guide.doctree
alembic/versions/: add_moderation_tables.py
app/: __init__.py  __main__.py  brixa_app.py  cli.py  config.py  crypto.py  extensions.py  factory.py  main.py  models.py  security.py
app/ai/: ai_communication.py  ai_decision_framework.py  explainability.py  instance.py  integration_example.py  model_manager.py  personalization.py  privacy.py  rl_algorithms.py  secure_ai_service.py
app/alerting/: alert_manager.py
app/api/: __init__.py  analysis.py  ban_appeals.py  deps.py  donation.py  feedback.py  message_routes.py  moderation.py  server.py  (+1 more)
benchmarks/: benchmark_encryption.py
blockchain/: .env.example  DEPLOYMENT.md  hardhat.config.js  package-lock.json  package.json
blockchain-new/: package.json
brixa/: __init__.py
brixa-core/: TOKENOMICS.md  brixa.conf.example  setup_brixa.py
config/: __init__.py  production.env  production.py
data/: encryption_config.json  key_20250928_022138.backup  key_20250928_022238.backup
decentralized/: package-lock.json  package.json  test.ts  tsconfig.json
demos/: autonomous_security_demo.py
deploy/: .env.example  Dockerfile.backend  Dockerfile.frontend  deploy.sh  docker-compose.prod.yml
docs/: RBAC.md  api_reference.md  architecture.md  developer_setup.md  llm_integration.md  mfa_lockout.md  monitoring_guide.md  p2p_network.md  production_checklist.md  tor_integration.md  user_guide.md
examples/: demo.py  llm_chat_example.py  p2p_demo.py  voice_commands_demo.py  webrtc_chat.py
frontend/: .env.example  package-lock.json  package.json  update-github.ps1
game/: requirements.txt
migrations/: add_lockout_until.py  env.py  env.py.new
models/: sentiment_model.pt
monitoring/: README.md  prometheus.yml
p2p-app/: .env.example  README.md  package.json
p2p-node/: package-lock.json  package.json
scrambled-eggs/: package-lock.json  package.json  tailwind.config.js
scrambled_eggs/: __init__.py  __main__.py  adaptive_encryption.py  antartica_routing.py  breach_detection.py  cli.py  config.py  controller.py  core.py  core.py.bak  exceptions.py  file_handler.py  key_management.py  memory_protection.py  p2p_utils.py  security.py  service.py  streaming.py  tor_network.py  tray_icon.py  user_cli.py  user_management.py  utils.py
scripts/: backup_database.sh  db_backup.py  generate_key.py  init_db.py  init_encryption.py  init_forum.py  migrate_encryption.py  monitor_tor.py  restore_database.sh  seed_rbac.py  setup_backups.sh  setup_database_replication.sh  setup_encryption.py  setup_encryption_system.py  setup_monitoring.sh  setup_production.sh  setup_ssl.sh  setup_tor.py  start_server.py  train_advanced.py  train_and_register.py  train_improved.py  train_sentiment.py
security/: __init__.py  audit_log.py  auth.py  config.py  file_utils.py  mfa.py  middleware.py  password_utils.py  rate_limiter.py  utils.py
server/: .env.example  chat-server.js  package-lock.json  package.json  server.js  signaling-server.js
src/: App.css  App.js  index.css  setupTests.js
templates/: index.html  tor_control.html
tests/: README.md  __init__.py  conftest.py  factories.py  minimal_test.py  requirements-test.txt  test_mfa_lockout.py  utils.py  verify_imports.py
wallets/: 19EjbpTnUafmdt4dqHGug36DQuq2nJGX3Q.json  1Em1XyqQ9EJKVcqnqsEUMdTeTBDqGAN7Z.json  1JEEm6V74SSikttwWZkNkVf7kAtpNwbDeo.json  1Kpyh133fvfHKP8Zf45PATqc4pTBFUkmQ1.json  1NTGoUCGTuJGHDJTuT1SVDum4VBPsubdzY.json  1NqaR9DpK6yWTgMSGy5JtLp36YQMUG884K.json
(+749 files in other folders)
