[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrambled-eggs"
version = "1.1.0"
description = "A secure, end-to-end encrypted P2P messaging and file sharing application"
readme = "README.md"
authors = [
    { name = "Scrambled Eggs Team", email = "security@scrambled-eggs.dev" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "pycryptodomex>=3.15.0",
    "cryptography>=38.0.1",
    "pynacl>=1.5.0",
    "requests>=2.28.1",
    "python-dotenv>=0.21.0",
    "pywin32>=305; sys_platform == 'win32'"
]

[project.scripts]
scrambled-eggs = "scrambled_eggs.cli:main"

[tool.setuptools]
packages = ["scrambled_eggs"]
package-dir = {"" = "."}

[project.optional-dependencies]
test = [
    "pytest-mock>=3.11.1",
    "sphinx>=7.0.1",
    "sphinx-rtd-theme>=1.2.2"
]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=scrambled_eggs --cov-report=term-missing"

[tool.coverage.run]
source = ["scrambled_eggs"]
omit = [
    "**/__init__.py",
    "**/tests/*"
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[metadata]
name = "scrambled-eggs"
version = "1.1.0"
description = "A secure, end-to-end encrypted P2P messaging and file sharing application"
author = "Scrambled Eggs Team"
author_email = "security@scrambled-eggs.dev"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
