[metadata]
name = scrambled-eggs
version = 1.1.0
description = A secure, end-to-end encrypted P2P messaging and file sharing application
author = Scrambled Eggs Team
author_email = security@scrambled-eggs.dev
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = .
    app = app
python_requires = >=3.8
install_requires =
    pycryptodomex>=3.15.0
    cryptography>=38.0.1
    pynacl>=1.5.0
    requests>=2.28.1
    python-dotenv>=0.21.0
    pywin32>=305; sys_platform == 'win32'

[options.entry_points]
console_scripts =
    scrambled-eggs = app.cli:main
