[metadata]
name = scrambled-eggs
version = 1.1.0
description = A secure, end-to-end encrypted P2P messaging and file sharing application
author = Scrambled Eggs Team
author_email = security@scrambled-eggs.dev
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = .
    app = app
python_requires = >=3.8
install_requires =
    pycryptodomex>=3.15.0
    cryptography>=38.0.1
    pynacl>=1.5.0
    requests>=2.28.1
    python-dotenv>=0.21.0
    pywin32>=305; sys_platform == 'win32'
    numpy>=1.21.0
    PyYAML>=6.0
    pydantic>=1.10.0
    typing-extensions>=4.0.0

[options.extras_require]
test = 
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-asyncio>=0.20.0
    pytest-mock>=3.10.0
    black>=22.0.0
    flake8>=5.0.0
    isort>=5.0.0
    mypy>=1.0.0
    types-PyYAML>=6.0.0
dev = 
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-asyncio>=0.20.0
    pytest-mock>=3.10.0
    black>=22.0.0
    flake8>=5.0.0
    isort>=5.0.0
    mypy>=1.0.0
    types-PyYAML>=6.0.0
    sphinx>=5.0.0
    sphinx-rtd-theme>=1.0.0
    sphinx-autodoc-typehints>=1.19.0
    twine>=4.0.0
    build>=0.8.0
    pre-commit>=2.20.0

[options.entry_points]
console_scripts =
    scrambled-eggs = app.cli:main
